--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^10.1.3",
     "@storybook/addon-docs": "^10.1.2",
     "@storybook/nextjs": "^10.1.2",
     "@testing-library/dom": "^10.4.1",
