--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/d3": "^7.4.3",
     "bcryptjs": "^3.0.3",
     "d3": "^7.9.0",
-    "doom-design-system": "^0.1.10",
+    "doom-design-system": "^0.1.12",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.555.0",
     "next": "^15.0.0",
@@ -42,6 +42,7 @@
     "ajv": "^8.17.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "^15.0.0",
+    "happy-dom": "^20.0.11",
     "jsdom": "^27.2.0",
     "prisma": "^5.22.0",
     "typescript": "^5",
